--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,8 @@
+*{
+    /* box-sizing: border-box; */
+    padding: 0px;
+    margin: 0px;
+}
 #heading{
     background-color: rgb(51, 166, 211);
     /* border: 3px solid red; */
@@ -7,31 +12,43 @@
 }
 
 .navbar{
-    /* border:3px solid black; */
+    /* border:2px solid rgb(231, 14, 14); */
     background-color: rgba(10, 1, 1, 0.815);
-    padding: 1px;
+    /* padding: 0px; */
     font-size: medium;
+    height: 35px;
 }
 .navbar ul{
-    overflow: auto;
+    /* overflow: auto; */
     /* border: 2px solid navy; */   
 }
-.navbar li{
+.navbar ul li{
     float: left;
     list-style: none; 
     /* border: 2px solid white;    */
+    margin-top: 5px;
+}
+.navbar img{
+    display: inline-block;
+    /* border: 2px solid red; */
+    float: right;
+    margin-right: 40px;
+    margin-top: 3px;
 }
 .navbar li a{
-    font-size: medium;
+    font-size: 20px;
+    /* font-weight: bold; */
     color:white;
-    padding: 12px;
+    padding: 22px;
     text-decoration: none;
-   
 }
 
 .container{
     border: 1px solid black;
-    margin:30px 800px 30px 50px;
+    margin-top: 30px;
+    width: 800px;
+    margin-left: 50px;
+    height: 180px;
 }
 
 .container h3{
@@ -39,14 +56,21 @@
 }
 
 .container p{
-    /* border:1px solid rgb(63, 63, 65); */
+    /* border:1px solid rgb(63, 63, 65);  */
     margin-left: 15px;
+    margin-top: 13px;
+    font-size: medium;
+    font-size: 18px;
 }
 
 .welcome{
+    margin-top: 40px;
     /* border: 3px solid yellow; */
-    margin:0px 250px 0px 50px;
+    margin-left: 50px;
+    width: 1100px;
+    font-size: 18px;
 }
 .welcome h3{
     /* border: 3px solid red; */
+    margin-bottom: 15px;
 }
